Fri Jun 23 16:01:31 UTC 2006  Steve Huston  <shuston@riverace.com>

        * examples/Reactor/Proactor/test_proactor.cpp (open): When calling
          ACE_OS::open(), don't supply a very UNIXy-looking 0644 value for
          the 'perms' argument. Let it default to something reasonable for
          the platform. Using 0644 on Windows passes something Windows doesn't
          like, and the test fails. Thanks very much to William Cote
          <William dot Cote at hp dot com> for fixing this.

        * THANKS: Added William Cote to the Hall of Fame.

Fri Jun 23 13:20:21 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        Reverted the change below, it triggers pidl recompilation for all pidl files
        Fri Jun 23 07:36:21 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
        * bin/MakeProjectCreator/config/taoidldefaults.mpb:
          Added .pidl to the inputext. This should be the way how things should
          run fine again in TAO but it seems somewhere ther is something missing.

Fri Jun 23 07:36:21 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/taoidldefaults.mpb:
          Added .pidl to the inputext. This should be the way how things should
          run fine again in TAO but it seems somewhere ther is something missing.

Thu Jun 22 21:05:20 UTC 2006  Krishnakumar B  <kitty@dre.vanderbilt.edu>

        * ace/OS_NS_fcntl.h (ACE_DEFAULT_OPEN_PERMS): Set the value of
          ACE_DEFAULT_OPEN_PERMS from ACE_DEFAULT_FILE_PERMS instead of
          0.  This ensures that users of ACE_OS::open() who don't override
          the default argument get a sensible default.

Thu Jun 22 15:08:01 UTC 2006  Steve Huston  <shuston@riverace.com>

        * ace/SSL/SSL_Context.{h cpp} (load_trusted_ca): Added a third
          argument, bool use_env_defaults, which defaults to true. If false,
          the ca_file and ca_dir arguments do not get ACE defaults applied